UI: Fixing contributor typos

--- a/src/GLideNUI/AboutDialog.ui
+++ b/src/GLideNUI/AboutDialog.ui
@@ -233,8 +233,8 @@ matthewharvey
 lioncash
 Predator82Germany
 AmbientMalice
-bantiste0602
-Gilles Siherlin
+baptiste0602
+Gilles Siberlin
 Daniel Eck
 Víctor &quot;IlDucci&quot;
 orbea
