Revert "UI: Translation files for new font selection"
This reverts commit 2b18b5a70ce4b55be1ffd218dedf790643e2b060.

--- a/src/GLideNUI/configDialog.ui
+++ b/src/GLideNUI/configDialog.ui
@@ -3687,7 +3687,7 @@
                  </font>
                 </property>
                 <property name="text">
-                 <string notr="true">████</string>
+                 <string>████</string>
                 </property>
                 <property name="autoDefault">
                  <bool>false</bool>
@@ -4235,11 +4235,11 @@
   </connection>
  </connections>
  <buttongroups>
-  <buttongroup name="fixTexrectCoordsButtonGroup"/>
-  <buttongroup name="factorButtonGroup"/>
-  <buttongroup name="screenshotButtonGroup"/>
   <buttongroup name="aspectButtonGroup"/>
-  <buttongroup name="bloomBlendModeButtonGroup"/>
+  <buttongroup name="screenshotButtonGroup"/>
   <buttongroup name="osdButtonGroup"/>
+  <buttongroup name="factorButtonGroup"/>
+  <buttongroup name="fixTexrectCoordsButtonGroup"/>
+  <buttongroup name="bloomBlendModeButtonGroup"/>
  </buttongroups>
 </ui>
